/**
 * Abstract base class for API services.
 * Provides a common base for API-related classes.
 */
export abstract class BaseApi {
  // No methods defined; children classes will implement specific methods.
}
