/**
 * Abstract resource interface representing a basic resource with an ID.
 */
export interface BaseResource {
  /**
   * The unique identifier of the resource.
   */
  id: number;
}

/**
 * Abstract response interface for API responses.
 */
export interface BaseResponse {
}
